--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exadel-bonus",
   "version": "0.0.0",
+  "author": "Team3 Internship",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,6 +10,20 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "bugs": {
+    "url": "https://github.com/rmurtazin/exadelBonus/issues"
+  },
+  "homepage": "https://github.com/rmurtazin/exadelBonus#readme",
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.0.7.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rmurtazin/exadelBonus.git"
+  },
+  "keywords": [
+    "exadel"
+  ],
+  "license": "ISC",
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.9",
@@ -54,20 +69,5 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
-  },
-  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.0.7.",
-  "main": "karma.conf.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rmurtazin/exadelBonus.git"
-  },
-  "keywords": [
-    "exadel"
-  ],
-  "author": "Team3 Internship",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rmurtazin/exadelBonus/issues"
-  },
-  "homepage": "https://github.com/rmurtazin/exadelBonus#readme"
+  }
 }
