--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.9",
+    "@angular/animations": "^11.0.9",
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
@@ -36,6 +36,7 @@
     "@angular/router": "~11.0.9",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "leaflet": "^1.7.1",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
