--- a/angular.json
+++ b/angular.json
@@ -29,8 +29,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/leaflet/dist/leaflet.css",
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": []
           },
