--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "styles": [
               "src/styles.scss",
               "./node_modules/leaflet/dist/leaflet.css",
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -93,8 +93,9 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css",
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.scss"
             ],
             "scripts": []
           }
