--- a/.prettierignore
+++ b/.prettierignore
@@ -1,13 +1,4 @@
 dist
 e2e
-.eslintrc.js
-angular.json
-karma.conf.js
-package.json
-package-loc.json
-README.md
-tsconfig.app.json
-tsconfig.json
-tsconfig.spec.json
-tslint.json
-main.ts
+*.json
+*.md
