--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "@interfaces/*": ["src/app/core/interfaces/*"],
       "@components/*": ["src/app/core/components/*"],
       "@services/*": ["src/app/core/services/*"],
-      "@enums/*": ["src/app/core/enums/*"]
+      "@enums/*": ["src/app/core/enums/*"],
+      "@models/*": ["src/app/core/models/*"]
     },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
