--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
+    "resolveJsonModule": true,
+    // TODO: remove resolveJsonModule
     "module": "es2020",
     "lib": [
       "es2018",
