--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@types/leaflet.markercluster": "^1.4.3",
+    "date-fns": "^2.17.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.4.1",
     "ngx-mask": "^11.1.4",
