--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "@types/leaflet.markercluster": "^1.4.3",
     "date-fns": "^2.17.0",
+    "jwt-decode": "^3.1.2",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.4.1",
     "ngx-mask": "^11.1.4",
